--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"keywords": [],
-	"author": "Ibrohimbek Alisherov (Brian)",
+	"author": "DiyorbekMIT",
 	"license": "ISC",
 	"dependencies": {
 		"@types/morgan": "^1.9.9",
