--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
 	"author": "DiyorbekMIT",
 	"license": "ISC",
 	"dependencies": {
-		"@types/morgan": "^1.9.9",
 		"dotenv": "^16.0.3",
 		"ejs": "^3.1.6",
 		"express": "^4.17.3",
@@ -25,8 +24,11 @@
 		"morgan": "^1.10.0"
 	},
 	"devDependencies": {
+		"@types/morgan": "^1.9.9",
+		"@types/bcryptjs": "^2.4.6",
 		"@types/express": "^4.17.3",
 		"@types/node": "^20.14.2",
+		"bcryptjs": "^2.4.3",
 		"nodemon": "^3.0.2",
 		"ts-node": "^10.9.1",
 		"tsconfig-paths": "^4.2.0",
