--- a/package.json
+++ b/package.json
@@ -15,18 +15,22 @@
 	"author": "DiyorbekMIT",
 	"license": "ISC",
 	"dependencies": {
+		"connect-mongodb-session": "^3.1.1",
 		"dotenv": "^16.0.3",
 		"ejs": "^3.1.6",
 		"express": "^4.17.3",
+		"express-session": "^1.17.3",
 		"moment": "^2.29.1",
 		"mongodb": "^3.2.6",
 		"mongoose": "^6.2.9",
 		"morgan": "^1.10.0"
 	},
 	"devDependencies": {
-		"@types/morgan": "^1.9.9",
 		"@types/bcryptjs": "^2.4.6",
+		"@types/connect-mongodb-session": "^2.4.7",
 		"@types/express": "^4.17.3",
+		"@types/express-session": "^1.18.0",
+		"@types/morgan": "^1.9.9",
 		"@types/node": "^20.14.2",
 		"bcryptjs": "^2.4.3",
 		"nodemon": "^3.0.2",
