--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
 	"author": "DiyorbekMIT",
 	"license": "ISC",
 	"dependencies": {
+		"@types/jsonwebtoken": "^9.0.6",
 		"connect-mongodb-session": "^3.1.1",
+		"cookie-parser": "^1.4.6",
 		"dotenv": "^16.0.3",
 		"ejs": "^3.1.6",
 		"express": "^4.17.3",
 		"express-session": "^1.17.3",
+		"jsonwebtoken": "^8.5.1",
 		"moment": "^2.29.1",
 		"mongodb": "^3.2.6",
 		"mongoose": "^6.2.9",
@@ -28,18 +31,19 @@
 		"uuid": "^8.3.2"
 	},
 	"devDependencies": {
+		"@types/cookie-parser": "^1.4.7",
 		"@types/bcryptjs": "^2.4.6",
 		"@types/connect-mongodb-session": "^2.4.7",
 		"@types/express": "^4.17.3",
 		"@types/express-session": "^1.18.0",
 		"@types/morgan": "^1.9.9",
+		"@types/multer": "^1.4.11",
 		"@types/node": "^20.14.2",
+		"@types/uuid": "^10.0.0",
 		"bcryptjs": "^2.4.3",
 		"nodemon": "^3.0.2",
 		"ts-node": "^10.9.1",
 		"tsconfig-paths": "^4.2.0",
-		"typescript": "^5.2.2",
-		"@types/multer": "^1.4.11",
-		"@types/uuid": "^10.0.0"
+		"typescript": "^5.2.2"
 	}
 }
