--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
 	"author": "DiyorbekMIT",
 	"license": "ISC",
 	"dependencies": {
+		"@types/dotenv": "^8.2.0",
 		"@types/jsonwebtoken": "^9.0.6",
 		"connect-mongodb-session": "^3.1.1",
 		"cookie-parser": "^1.4.6",
-		"dotenv": "^16.0.3",
+		"dotenv": "^16.4.5",
 		"ejs": "^3.1.6",
 		"express": "^4.17.3",
 		"express-session": "^1.17.3",
@@ -31,9 +32,9 @@
 		"uuid": "^8.3.2"
 	},
 	"devDependencies": {
-		"@types/cookie-parser": "^1.4.7",
 		"@types/bcryptjs": "^2.4.6",
 		"@types/connect-mongodb-session": "^2.4.7",
+		"@types/cookie-parser": "^1.4.7",
 		"@types/express": "^4.17.3",
 		"@types/express-session": "^1.18.0",
 		"@types/morgan": "^1.9.9",
