--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@types/jsonwebtoken": "^9.0.6",
 		"connect-mongodb-session": "^3.1.1",
 		"cookie-parser": "^1.4.6",
+		"cors": "^2.8.5",
 		"dotenv": "^16.4.5",
 		"ejs": "^3.1.6",
 		"express": "^4.17.3",
@@ -32,6 +33,7 @@
 		"uuid": "^8.3.2"
 	},
 	"devDependencies": {
+		"@types/cors": "^2.8.17",
 		"@types/bcryptjs": "^2.4.6",
 		"@types/connect-mongodb-session": "^2.4.7",
 		"@types/cookie-parser": "^1.4.7",
